# etc

./: .env.example  .gitignore  CONTRIBUTING.md  DOMAIN.md  LICENSE  PROJECT.md  README.md  RELEASES.md  RELEASE_NOTES.md  compile-sdlc.py  install.sh  opus-4.7-migration-spec.md  pyproject.toml  pyrightconfig.json  settings-hooks.json
.claude/: settings.json
.etc_sdlc/: 4.7-migration-state.md  profiles.yaml.template
.meta/: description.md
.sdlc/: dod-templates.json  tracker.py
.taskmaster/: config.json  state.json
agents/: architect-reviewer.md  architect.md  backend-developer.md  baseline-surveyor.md  brownfield-bootstrapper.md  code-reviewer.md  code-simplifier.md  design.md  devops-engineer.md  domain-modeler.md  frontend-dashboard-refactorer.md  frontend-developer.md  gemini-analyzer.md  hotfix-responder.md  janitor.md  multi-tenant-auditor.md  process-evaluator.md  product-manager.md  product-owner.md  project-bootstrapper.md  researcher.md  security-reviewer.md  sem.md  spec-enforcer.md  technical-writer.md  ui-designer.md  ux-designer.md  verifier.md
assets/: etsy-logo.ascii
docs/: 4.7-migration-changelog.md  blog-4.7-migration.md  lessons-learned-v1.md  project-overview.md  release-notes-2026-06-12-architecture-baseline.md  release-notes-2026-06-12-janitor-published-asset-guard.md  v1.6-roadmap.md
etc_installer/: __init__.py  __main__.py  banner.py  cli.py  install_steps.py  paths.py  preflights.py  profiles.py  sandbox_config.py  settings_merge.py  status_line.py
getting-started/: INVARIANTS.md  README.md  SEAMS.md  app.py  pyproject.toml
getting-started/.claude/: CLAUDE.md  settings.local.json
getting-started/.meta/: description.md  gap-analysis.md
getting-started/.sdlc/: state.json
getting-started/spec/: domain-model.md  edge-cases.md  evaluation-report.md  prd.md  system-design.md
getting-started/spec/adrs/: 001-fastapi-with-static-files.md  002-read-only-json-access.md  003-polling-not-websockets.md
getting-started/src/: models.py  readers.py
getting-started/static/: app.js  index.html  style.css
getting-started/tests/: conftest.py  test_app.py  test_models.py  test_readers.py
getting-started/tests/fixtures/: minimal_state.json  valid_state.json  valid_tasks.json
hooks/: auto-checkpoint.sh  baseline-verify.sh  block-config-changes.sh  block-dangerous-commands.sh  check-baseline-fresh.sh  check-baseline-schema.sh  check-code-quality.sh  check-completion-discipline.sh  check-concepts.sh  check-diagnostic-evidence.sh  check-invariants.sh  check-phase-gate.sh  check-profiles-fresh.sh  check-required-reading.sh  check-seam-evidence.sh  check-test-exists.sh  check-tier-0.sh  check-value-hypothesis-schema.sh  chief-efficiency-officer.sh  ci-gate.sh  inject-standards.sh  mark-dirty.sh  pre-compact-checkpoint.sh  reinject-context.sh  runtime-verify.sh  sandbox-bypass-tracker.sh  tier-0-design-preflight.sh  verify-green.sh
platform/: HOW-IT-WORKS.md  README.md  docker-compose.yml  pyproject.toml
platform/.meta/: description.md
platform/docs/vision/: v2.1-roadmap.md
platform/sql/: 001_initial_schema.sql  002_guardrail_overrides.sql
platform/sql/.meta/: description.md
platform/src/etc_platform/: __init__.py  agent_runtime.py  cli.py  config.py  db.py  events.py  graph_engine.py  guardrails.py  intake.py  knowledge.py  metrics.py  orchestrator.py  phases.py  retry.py  run_engine.py  topology.py
platform/src/etc_platform/.meta/: description.md
platform/tests/: conftest.py  test_agent_runtime.py  test_cli.py  test_cli_phase.py  test_config.py  test_db.py  test_events.py  test_graph_engine.py  test_guardrail_override.py  test_guardrail_retry_flow.py  test_guardrails.py  test_intake.py  test_integration.py  test_knowledge.py  test_knowledge_cli.py  test_metrics.py  test_orchestrator.py  test_phases.py  test_retry.py  test_run_engine.py  test_schema.py  test_topology.py  test_topology_cli.py
platform/tests/.meta/: description.md
scripts/: active_to_shipped_mv.py  baseline.py  check-vocabulary.py  completion_report.py  cross_feature_collision_check.py  design_md_compose.py  design_token_gate.py  detect_profiles.py  diagnostic_evidence.py  dispatch_profile.sh  dispatch_prompt.py  etc-runtime  etc_runtime.py  extend_resolver.py  feature_id.py  feature_paths.py  git_tags.py  janitor_assets.py  janitor_boundary_check.py  janitor_trust.py  journey_id.py  journey_lineage_check.py  layer_review.py  lesson_gate_audit.py  manifest_body_conformance.py  meta-reconcile.py  precompact_checkpoint.py  profile_loader.py  reject_feature_mv.py  release_notes.py  resolve_agent_profile.py  review_gate.py  runtime_totalization_check.py  sdlc_timing.py  spec_coupling_check.py  spec_enforcer_chunker.py  tasks.py  telemetry.py  value_hypothesis.py
spec/: adopt-google-design-md-spec.md  auto-checkpoint-stop-hook.md  brownfield-architecture-baseline.md  build-autonomous-via-goal.md  build-completion-reports.md  build-review-agent-gate.md  chief-efficiency-officer.md  closed-loop-ticket-pipeline.md  codex-native-harness-conversion.md  codex-support-upstream-sync-hardening.md  design-phase-wrapping-impeccable.md  directory-lifecycle.md  discovery-protocol.md  dispatch-prompt-assembler.md  etc_sdlc.yaml  feedback-diagnostic-dismissal-discipline.md  feedback-subagent-final-message-contract.md  hook-cost-reduction-brief.md  hook-cost-reduction.md  hotfix-skill-brief.md  hotfix.md  init-project.md  install-sh-cli-ux-and-scope-flag.md  janitor-autonomous-cleanup.md  journey-capture-skill-for-sme-led-mvp-discovery.md  kg-poc.md  language-agnostic-harness.md  layered-architecture-review.md  merge-discipline-cross-feature-collision.md  metrics-and-release-notes.md  orphan-surface-dispatch-gate.md  prd-hook-test-suite.md  prd-v1.1-harness-evolution.md  prd-v1.2-templates-journal-checkpoint.md  prd-v1.3-features-tasks-scaling.md  profile-driven-agent-bodies.md  python-installer-rewrite.md  spec-adr-coupling-gate-step-7-5.md  (+12 more)
tests/fixtures/diagnostic-discipline-failing-wave/: pyproject.toml
tests/fixtures/diagnostic-discipline-failing-wave/src/: bad.py  good.py
(+459 files in other folders)
