[project]
name = "etc-system-engineering"
version = "1.0.0"
description = "Engineering Team, Codified — SDLC harness for AI-assisted software development"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # Ftmp-5afddbce: Python installer rewrite (etc_installer/). typer
    # owns argv parsing + auto-styled --help; rich owns terminal UX
    # (✓/⚠/✗ status lines, ANSI banner write-through). Pin floors per
    # design.md Technical Constraints: typer>=0.12 (rich integration
    # stabilized); rich>=13.7 (Console.color_system property).
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
compile-sdlc = "compile_sdlc:main"

# Ftmp-5afddbce: etc_installer ships inline in the repo (ADR-003 —
# docs/adrs/Ftmp-5afddbce-003-etc-installer-inline.md). The bash
# bootstrap hands off via `exec uv run --from "$SCRIPT_DIR" -m
# etc_installer "$@"`. Hatchling (uv's default build backend when none
# is declared) auto-discovers packages by directory name; once task
# 002 lands etc_installer/__init__.py the package is importable via
# `python -m etc_installer` without further pyproject changes.

[tool.uv]
dev-dependencies = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "types-pyyaml>=6.0.12.20260510",
    # mypy is invoked by check-completion-discipline.sh's CI gate via
    # `"$PYTHON" -m mypy ...`. Without it in the venv, every Stop event
    # fails the type-check step with "No module named mypy".
    "mypy>=1.10",
    # F-2026-06-02: compile-sdlc.py serializes concurrent compiles with a
    # filelock so parallel test workers (pytest-xdist) don't race on the
    # shared dist/ tree. compile-sdlc falls back to nullcontext when filelock
    # is absent (install-time is single-invocation), but the dev/CI suite runs
    # parallel and MUST have it for the lock to engage.
    "filelock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath ensures the new etc_installer package (Ftmp-5afddbce) resolves
# during pytest collection. Per ADR-Ftmp-5afddbce-003, etc_installer lives
# inline in the repo root; pytest needs the root on sys.path to import it
# without per-test-file sys.path.insert hacks.
pythonpath = ["."]
# --ignore-glob entries exclude sandbox-denied paths (.env*) from pytest's
# collection walker, which otherwise stats every top-level file in rootdir
# and fails on sandboxed secrets files before any test runs.
addopts = "-v --tb=short --ignore-glob=.env*"
norecursedirs = [".git", ".venv", "venv", "node_modules", "dist", "build", ".etc_sdlc", "platform"]

[tool.pyright]
# etc_installer ships inline at the repo root (ADR-Ftmp-5afddbce-003); without
# an extraPaths hint, Pyright reports `reportMissingImports` even though the
# package resolves at runtime (verified via `python3 -c "import etc_installer"`).
# Documented as an F021 interpreter-diff diagnostic dismissal at the structural
# (pyproject.toml) layer rather than per-source-file evidence comments.
extraPaths = ["."]

[tool.mypy]
# F020 surfaced mypy-was-off-in-practice. Coverage gate enforced 98%
# against unscoped imports → never satisfied → operators silently
# cleared .tdd-dirty. The python profile's verify-green now runs mypy
# against scripts/ + hooks/helpers/, and these overrides tolerate the
# few unresolved type-stub situations we can't fix at runtime.
python_version = "3.11"

[[tool.mypy.overrides]]
# types-PyYAML is in dev-dependencies but mypy isn't picking it up via
# uv's [tool.uv].dev-dependencies surface. Until that's resolved (likely
# a uv → PEP 735 [dependency-groups] migration), tolerate the missing
# stub. Yaml is parsed via yaml.safe_load only — no untyped behavior at
# runtime, just a stub-resolution gap.
module = "yaml"
ignore_missing_imports = true

[tool.coverage.run]
# F020 honest coverage scope. Pre-F020, --cov-fail-under=98 measured the
# whole import graph (test files, fixtures, legacy v2 platform/ tree) —
# the 98% threshold was theater because tests have 100% self-coverage by
# definition and the legacy platform/ tree drags total coverage down.
# Scope here is what etc actually owns + tests for the harness layer:
#   - scripts/: harness CLIs (tasks.py, value_hypothesis.py, git_tags.py, ...)
#   - hooks/helpers/: AST helpers used by check-code-quality.sh
source = ["scripts", "hooks/helpers"]
omit = [
    "platform/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
# F020 honest baseline. Pre-F020 the gate enforced 98% against the whole
# import graph (test files self-cover at 100%; legacy platform/ tree drags
# total down). In practice it never fired — operators silently cleared
# .tdd-dirty when verify-green would otherwise have blocked. Now scope is
# scripts/ + hooks/helpers/ ONLY (per [tool.coverage.run] above) and the
# floor matches measured baseline.
#
# Ratchet history: baseline 29% (2026-05-16) → measured 53% (2026-06-09,
# full suite). The 2026-05-16 floor of 28 was never raised as coverage
# improved, leaving a 25-point silent-regression window (every test for a
# fully-covered gate script could vanish without this gate firing). Floor
# now ratcheted to 50 — just under measured, leaving slack for legitimate
# variance. RATCHET RULE: when measured coverage rises, raise this floor
# to roughly (measured - 3); never lower it to silence a failure.
# tests/ pins this number to standards/testing/testing-standards.md so the
# doc and the gate cannot drift apart again.
#
# Next leverage: tasks.py (~29% on 868 stmts) and etc_runtime.py (~40%).
# Note: several scripts read 0% only because they are tested via
# subprocess and subprocess tracing is not wired (audit init 5 Next-tier
# item: [tool.coverage.run] patch = ["subprocess"]).
fail_under = 50
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately have long fixture strings, long docstrings with
# inline examples, and long path expressions. Matches the reference
# ruff config in standards/code/ruff-reference.toml.
"tests/**/*.py" = ["E501"]
# platform/ is legacy v2 prototype code; E501 and N806 are cosmetic/
# naming rules not worth churning there. Correctness rules (B904,
# TC002/TC003) have already been fixed in-tree.
"platform/**/*.py" = ["E501", "N806"]
