[project]
name = "etc-platform"
version = "0.1.0"
description = "ETC Orchestration Platform — durable, event-driven AI agent SDLC orchestration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21",
    "rich>=13.7",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic>=2.9",
    "pydantic-ai>=1.0",
    "tomli>=2.0; python_version < '3.11'",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
etc = "etc_platform.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etc_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/etc_platform"]

[tool.coverage.report]
fail_under = 95
